removed horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -961,6 +961,11 @@ video {
   padding: 0.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .text-center {
   text-align: center;
 }
